--- a/BeatSaberTools/wwwroot/index.html
+++ b/BeatSaberTools/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 	<title>BeatSaberTools</title>
 	<base href="/" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+	<div class="status-bar-safe-area"></div>
 
 	<div id="app">Loading...</div>
 
@@ -23,7 +25,6 @@
 
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
 </body>
 
 </html>
