--- a/BeatSaberTools/wwwroot/index.html
+++ b/BeatSaberTools/wwwroot/index.html
@@ -40,7 +40,7 @@
 	</style>
 </head>
 
-<body style="background-color: #32333dff;">
+<body style="background-color: #0f0f0f">
 
 	<div class="status-bar-safe-area"></div>
 
