Added tags filter to improvement map filters

--- a/MapMaven/wwwroot/index.html
+++ b/MapMaven/wwwroot/index.html
@@ -7,6 +7,7 @@
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
     <link href="css/flag-icons.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="MapMaven.styles.css" rel="stylesheet" />
@@ -43,20 +44,21 @@
 
 <body style="background-color: #0f0f0f">
 
-	<div class="status-bar-safe-area"></div>
+    <div class="status-bar-safe-area"></div>
 
-	<div id="app">
-		<img src="images/logo.png" class="load-icon" />
-	</div>
+    <div id="app">
+        <img src="images/logo.png" class="load-icon" />
+    </div>
 
-	<div id="blazor-error-ui">
-		An unhandled error has occurred.
-		<a href="" class="reload">Reload</a>
-		<a class="dismiss">🗙</a>
-	</div>
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
 
-	<script src="_framework/blazor.webview.js" autostart="false"></script>
-	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
 </body>
 
 </html>
