Saving sidenav width in localstorage

--- a/MapMaven/wwwroot/index.html
+++ b/MapMaven/wwwroot/index.html
@@ -40,6 +40,8 @@
             }
         }
     </style>
+
+    <script src="./Components/SideNav.razor.js"></script>
 </head>
 
 <body style="background-color: #0f0f0f">
